Making persistence recursive maybe

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
           command: doxygen Doxyfile
       - persist_to_workspace:
           root: .
-          paths: docs
+          paths:
+            - docs/*
 
   docs-deploy:
     docker:
